Revision history HTML::Lint and Test::HTML::Lint.

NOTE: All bugs and requests are now being handled through GitHub.

    https://github.com/petdance/html-lint/issues

Please DO NOT send bug reports to http://rt.cpan.org/.

NEXT


2.24    Wed Dec  7 22:20:13 CST 2016
    Official release.  No changes from 2.23_01.


2.23_01 Tue Dec  6 22:48:56 CST 2016
    [ENHANCEMENTS]
    Added detection of unknown HTML entities, like "known &unclosed
    &entities are not found".  Also fixes the case where HTML::Lint
    gets confused by an entity like "&sup2;" which it thought was an
    unterminated "&sup;" entity.  Thanks, Klaus S. Madsen.

    [FIXES]
    Errors of the type doc-tag-required did not come out in any defined
    order.  They are now sorted by tag name.  This was discovered
    because hash randomization caused tests to fail on Perl 5.18 and
    above. Thanks, Slaven Rezic, Andrew Main and Lisa Hare.

    Handle some warnings that get thrown if certain values are undef.
    Thanks, Yves Lavoie.

    Handle characters that are not handled by HTML::Entities. (GitHub
    issue #13) Thanks, Tim Landscheidt.

    [INTERNALS]
    Add a test to verify a fixed bug. Thanks to Lance Wicks as part of
    the CPAN Pull Request Challenge.


2.22    Mon Apr  6 15:47:11 CDT 2015
    [CHANGES THAT COULD BREAK YOUR CODE]
    Previously, html_ok() would not check the entire structure of a web
    page to check for <html>, <head>, <title> and <body> tags.  Now it
    will.  If you want to check fragments of HTML for validity but know
    that they are not valid HTML documents on their own, use the new
    html_fragment_ok().

    [ENHANCEMENTS]
    Added new error, elem-input-alt-missing, that warns of <input
    type="image"> tags that are missing an alt="" attribute.  This helps
    for accessability to make sure that any images have alternate text
    for screen readers.

    Added ability to modify HTML::Lint's table of known tags and
    attributes, so you could do this:
