@@ -22,6 +22,8 @@ t/30-test-builder.t
 t/40-where.t
 t/50-multiple-files.t
 t/60-add-tags.t
+t/api-eof-not-called.t
+t/api-parse-not-called.t
 t/attr-repeated.t
 t/attr-unknown.t
 t/config-unknown-directive.t
